create github pages

--- a/page3.html
+++ b/page3.html
@@ -29,7 +29,7 @@
                 <div class="mbr-navbar__column mbr-navbar__column--s mbr-navbar__brand">
                     <span class="mbr-navbar__brand-link mbr-brand mbr-brand--inline">
                         <span class="mbr-brand__logo"><a href="https://mobirise.com"><img src="assets/images/ksztat-1-128x128.png" class="mbr-navbar__brand-img mbr-brand__img" alt="Mobirise"></a></span>
-                        <span class="mbr-brand__name"><a class="mbr-brand__name text-gray" href="https://mobirise.com">AB design</a></span>
+                        <span class="mbr-brand__name"><a class="mbr-brand__name text-gray" href="index.html">AB design</a></span>
                     </span>
                 </div>
                 <div class="mbr-navbar__hamburger mbr-hamburger"><span class="mbr-hamburger__line"></span></div>
@@ -46,7 +46,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide mbr-after-navbar" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-10" data-rv-view="832" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide mbr-after-navbar" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-10" data-rv-view="832" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-section__container">
         <div>
             <ol class="carousel-indicators">
