--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="mbr-navbar__column mbr-navbar__column--s mbr-navbar__brand">
                     <span class="mbr-navbar__brand-link mbr-brand mbr-brand--inline">
                         <span class="mbr-brand__logo"><a href="https://mobirise.com"><img src="assets/images/ksztat-1-128x128.png" class="mbr-navbar__brand-img mbr-brand__img" alt="Mobirise"></a></span>
-                        <span class="mbr-brand__name"><a class="mbr-brand__name text-gray" href="https://mobirise.com">AB design</a></span>
+                        <span class="mbr-brand__name"><a class="mbr-brand__name text-gray" href="index.html">AB design</a></span>
                     </span>
                 </div>
                 <div class="mbr-navbar__hamburger mbr-hamburger"><span class="mbr-hamburger__line"></span></div>
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-d" data-rv-view="0" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.info/i">web creation software</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-d" data-rv-view="0" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-section__container">
         <div>
             <ol class="carousel-indicators">
@@ -578,7 +578,7 @@
                             <div class="hide" data-form-alert-success="true">Dziękuję za wiadomość! Odpowiem na Twoje zapytanie najszybciej jak to możliwe. </div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="napisz do mnie">
-                            <input type="hidden" value="w+wZblFaiQjSwPFfNpgsktT/xuiRZVkiyM3m+MeeF3RXRaCJfEzZhj2CvAogPFa8lG1ZhtWJ/VQDzZ8Ku14XkR2xaYuf6u032G/SvFjLe3p86TGZkY6yPjqy33TLp64K" data-form-email="true">
+                            <input type="hidden" value="W62nZf7wRPyrV/Ah5cjix2BcJYtCqBEDNcvcfC1XK5vWuQkUToy7xe/7R1ZtRReD5kDsJb9uAmF8+OSUdnftYQSgNyy0/DIfce6IcbNYoo2g9TowHv31xvxAcklA+4O/" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Name*" data-form-field="Name">
                             </div>
