--- a/page1.html
+++ b/page1.html
@@ -28,7 +28,7 @@
                 <div class="mbr-navbar__column mbr-navbar__column--s mbr-navbar__brand">
                     <span class="mbr-navbar__brand-link mbr-brand mbr-brand--inline">
                         <span class="mbr-brand__logo"><a href="https://mobirise.com"><img src="assets/images/ksztat-1-128x128.png" class="mbr-navbar__brand-img mbr-brand__img" alt="Mobirise"></a></span>
-                        <span class="mbr-brand__name"><a class="mbr-brand__name text-gray" href="https://mobirise.com">AB design</a></span>
+                        <span class="mbr-brand__name"><a class="mbr-brand__name text-gray" href="index.html">AB design</a></span>
                     </span>
                 </div>
                 <div class="mbr-navbar__hamburger mbr-hamburger"><span class="mbr-hamburger__line"></span></div>
@@ -45,7 +45,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-s" data-rv-view="222" style="background-image: url(assets/images/ania-to-1784x1256.jpg);">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-s" data-rv-view="222" style="background-image: url(assets/images/ania-to-1784x1256.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         
         <div class="mbr-box__container mbr-section__container container">
