create github pages

--- a/page1.html
+++ b/page1.html
@@ -21,7 +21,7 @@
   
 </head>
 <body>
-  <section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse mbr-navbar--transparent" id="menu-q" data-rv-view="220">
+  <section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse mbr-navbar--transparent" id="menu-q" data-rv-view="215">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
             <div class="mbr-navbar__container">
@@ -45,7 +45,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-s" data-rv-view="222" style="background-image: url(assets/images/ania-to-1784x1256.jpg);">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-s" data-rv-view="217" style="background-image: url(assets/images/ania-to-1784x1256.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -53,7 +53,7 @@
                 <div class="row"><div class=" col-sm-8 col-sm-offset-2">
                     <div class="mbr-hero animated fadeInUp">
                         <h1 class="mbr-hero__text">będzie krótko...</h1>
-                        <p class="mbr-hero__subtext"><br>.... choć mam wiele pasji. <br>Największe z nich to: projektowanie wnętrz i detali, taniec oraz biomechanika. <br>Jestem absolwentką studiów podyplomowych na kierunku Wnętrza&amp;Design,&nbsp;<br>ukończyłam także stuia magisterskie i inżynierskie <br>na kierunku Inżynieria Biomedyczna Politechniki Wrocławskiej. <br>Uważam, że chcieć to móc i chcę to Wam pokazać!</p>
+                        <p class="mbr-hero__subtext"><br>.... choć mam wiele pasji. <br>Największe z nich to: projektowanie wnętrz i detali, taniec oraz biomechanika. <br>Jestem absolwentką studiów podyplomowych na kierunku Wnętrza&amp;Design,&nbsp;<br>ukończyłam także studia magisterskie i inżynierskie <br>na kierunku Inżynieria Biomedyczna Politechniki Wrocławskiej. <br>Uważam, że chcieć to móc i chcę to Wam pokazać!</p>
                     </div>
                     <div class="mbr-buttons btn-inverse mbr-buttons--center"> <a class="mbr-buttons__btn btn btn-lg btn-default animated fadeInUp delay" href="index.html#slider-d">wróć</a></div>
                 </div></div>
