--- a/page2.html
+++ b/page2.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-  <section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse mbr-navbar--transparent" id="menu-t" data-rv-view="693">
+  <section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse mbr-navbar--transparent" id="menu-t" data-rv-view="220">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
             <div class="mbr-navbar__container">
@@ -46,7 +46,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a website for free</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide mbr-after-navbar" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-w" data-rv-view="777" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.info/g">build your own site for free</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide mbr-after-navbar" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-w" data-rv-view="222" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-section__container">
         <div>
             <ol class="carousel-indicators">
@@ -140,7 +140,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery1-x" data-rv-view="789" style="background-color: rgb(76, 105, 114);">
+<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery1-x" data-rv-view="237" style="background-color: rgb(76, 105, 114);">
     <!-- Gallery -->
     <div class=" mbr-gallery-layout-default">
         <div>
@@ -222,7 +222,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--short-paddings" id="msg-box1-y" data-rv-view="827" style="background-color: rgb(60, 60, 60);">
+<section class="mbr-section mbr-section--relative mbr-section--short-paddings" id="msg-box1-y" data-rv-view="256" style="background-color: rgb(60, 60, 60);">
 
     
 
