create github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a site for free</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-d" data-rv-view="0" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own website for free</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-d" data-rv-view="0" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-section__container">
         <div>
             <ol class="carousel-indicators">
@@ -578,7 +578,7 @@
                             <div class="hide" data-form-alert-success="true">Dziękuję za wiadomość! Odpowiem na Twoje zapytanie najszybciej jak to możliwe. </div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="napisz do mnie">
-                            <input type="hidden" value="jbDyhVuG+HrhFGAwk6coKj3p2JIdYtIqoxC7urgzdrrmDCoeQVP07qrVbQixzorM0lAL/HcKCVUxoO86lOZ9ghGhmjqeA6jMTCSV86KbkRmH96AhsLncsgxquYXcjFFE" data-form-email="true">
+                            <input type="hidden" value="W6quLgb5X4xmBXA5sFamhXINDC7NxqxMYiUrQQZQiTjqDuH26NCq8KrgJVVLligbdLsKwLVaLs39CVpvISGS9/NRi86/VdlvCqBw6voQyNktF1gcQpZrf5OCaPfXphOA" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Name*" data-form-field="Name">
                             </div>
