--- a/page3.html
+++ b/page3.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-  <section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse mbr-navbar--transparent" id="menu-z" data-rv-view="259">
+  <section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse mbr-navbar--transparent" id="menu-z" data-rv-view="355">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
             <div class="mbr-navbar__container">
@@ -46,7 +46,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide mbr-after-navbar" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-10" data-rv-view="261" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide mbr-after-navbar" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-10" data-rv-view="357" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-section__container">
         <div>
             <ol class="carousel-indicators">
@@ -122,7 +122,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery1-11" data-rv-view="273" style="background-color: rgb(76, 105, 114);">
+<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery1-11" data-rv-view="369" style="background-color: rgb(76, 105, 114);">
     <!-- Gallery -->
     <div class=" mbr-gallery-layout-default">
         <div>
@@ -204,7 +204,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--short-paddings" id="msg-box1-12" data-rv-view="292" style="background-color: rgb(60, 60, 60);">
+<section class="mbr-section mbr-section--relative mbr-section--short-paddings" id="msg-box1-12" data-rv-view="388" style="background-color: rgb(60, 60, 60);">
 
     
 
